--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,5 +81,5 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.configuration }}-${{ matrix.architecture }}-${{ env.describe }}
+          name: YetAnotherLogViewer_${{ matrix.configuration }}_${{ matrix.architecture }}_${{ env.describe }}
           path: PCL2-Log-Viewer\obj\${{ matrix.architecture }}\${{ matrix.configuration }}\PCL2_Log_Viewer.exe
