--- a/PCL2-Log-Viewer/packages.config
+++ b/PCL2-Log-Viewer/packages.config
@@ -4,4 +4,5 @@
   <package id="AdonisUI.ClassicTheme" version="1.17.1" targetFramework="net481" />
   <package id="Costura.Fody" version="6.0.0" targetFramework="net481" developmentDependency="true" />
   <package id="Fody" version="6.9.2" targetFramework="net481" developmentDependency="true" />
+  <package id="Resource.Embedder" version="2.2.0" targetFramework="net481" />
 </packages>
